# WarCardGame

./: CMakeLists.txt  Card.cpp  Card.hpp  Deck.hpp  README.md  WarHelpers.hpp  main.cpp
include/: Card.hpp  Deck.hpp  WarHelpers.hpp
source/: Card.cpp  Deck.cpp  WarHelpers.cpp
